# openapi/specs/v0.yaml
@@ -2209,6 +2209,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/CourseResourceResourceTypeEnum'
@@ -2325,6 +2329,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - offered_by
       - pace
       - platform
@@ -2716,6 +2721,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/DocumentResourceResourceTypeEnum'
@@ -2836,6 +2845,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - offered_by
       - pace
       - platform
@@ -3228,6 +3238,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/LearningPathResourceResourceTypeEnum'
@@ -3344,6 +3358,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - learning_path
       - offered_by
       - pace
@@ -4576,6 +4591,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/PodcastEpisodeResourceResourceTypeEnum'
@@ -4691,6 +4710,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - offered_by
       - pace
       - platform
@@ -4871,6 +4891,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/PodcastResourceResourceTypeEnum'
@@ -4986,6 +5010,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - offered_by
       - pace
       - platform
@@ -5449,6 +5474,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/ProgramResourceResourceTypeEnum'
@@ -5564,6 +5593,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - offered_by
       - pace
       - platform
@@ -6243,6 +6273,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/VideoPlaylistResourceResourceTypeEnum'
@@ -6358,6 +6392,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - offered_by
       - pace
       - platform
@@ -6538,6 +6573,10 @@ components:
           nullable: true
           description: Return the best run id for the resource, if it has runs
           readOnly: true
+        learn_url:
+          type: string
+          description: Where this resource lives within Learn
+          readOnly: true
         resource_type:
           allOf:
           - $ref: '#/components/schemas/VideoResourceResourceTypeEnum'
@@ -6669,6 +6708,7 @@ components:
       - free
       - id
       - image
+      - learn_url
       - offered_by
       - pace
       - platform
